signin-signup complete, other partails in progress, other included partials are placeholders only

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,3 +2,14 @@
 @import "base/INDEX";
 @import "layout/INDEX";
 @import "components/INDEX";
+@import "partials/addGame_view";
+@import "partials/addScore_view";
+@import "partials/addSeason_view";
+@import "partials/addTeam_view";
+@import "partials/changeTable_view";
+@import "partials/admin_view";
+@import "partials/signup_view";
+@import "partials/signin_view";
+@import "partials/calendar_view";
+@import "partials/contact_view";
+@import "partials/home_view";
