--- a/src/views/auth/signup_view.html
+++ b/src/views/auth/signup_view.html
@@ -1,8 +1,8 @@
-<section>
+<section class="signup-view">
     <form data-ng-submit="register()">
-    	<input type="email" name="email" value="" data-ng-model="user.email"/>
-		  <input type="password" name="password" value="" data-ng-model="user.password"/>
-      <input type="confirmpassword" name="confirmpassword" value="" data-ng-model="user.confirmPassword"/>
-      <input type="submit" name="signup" value="Sign-Up" data-ng-disabled="!passwordMatch()"/>
+    	<p>Email: <input type="email" name="email" value="" data-ng-model="user.email"/></p>
+		<p>Password: <input type="password" name="password" value="" data-ng-model="user.password"/></p>
+      <p>Confirm Password: <input type="confirmpassword" name="confirmpassword" value="" data-ng-model="user.confirmPassword"/></p>
+      <input class="submit-btn" type="submit" name="signup" value="Sign-Up" data-ng-disabled="!passwordMatch()"/>
     </form> 
 </section>
