--- a/src/views/team/register_team_view.html
+++ b/src/views/team/register_team_view.html
@@ -23,51 +23,51 @@
 
 
   <form>
-    <h1>Team</h1>
-    name<input type="text" name="teamname" data-ng-model="team.name">
-    div<input type="text" name="division" data-ng-model="team.division">
-    season<input type="text" name="season" data-ng-model="team.season">
-    image<input type="file" name="pic" accept="image/*">
+    <h1>Register Team</h1>
+    Team Name<input placeholder="Team Name" type="text" name="teamname" data-ng-model="team.name">
+    Division<input placeholder="Division" type="text" name="division" data-ng-model="team.division">
+    Season<input placeholder="Season" type="text" name="season" data-ng-model="team.season">
+    Choose a Team image<input type="file" name="teampic" accept="image/*">
     <h2>Administrator</h2>
-    frst<input type="text" name="adminFirstname" data-ng-model="team.admin.firstName">
-    mid<input type="text" name="adminMiddlename" data-ng-model="team.admin.middleName">
-    lst<input type="text" name="adminLastname" data-ng-model="team.admin.lastName">
-    email<input type="email" name="adminEmail" data-ng-model="team.admin.email">
-    phone<input type="phone" name="adminPhone" data-ng-model="team.admin.phone">
+    First Name<input placeholder="First Name" type="text" name="adminFirstname" data-ng-model="team.admin.firstName">
+    Middle Name or Initial<input placeholder="Middle Name or Inital" type="text" name="adminMiddlename" data-ng-model="team.admin.middleName">
+    Last name<input placeholder="Last Name" type="text" name="adminLastname" data-ng-model="team.admin.lastName">
+    Email<input placeholder="Email" type="email" name="adminEmail" data-ng-model="team.admin.email">
+    Phone Number<input  placeholder="Phone Number" type="phone" name="adminPhone" data-ng-model="team.admin.phone">
     <h2>Captain</h2>
-    frst<input type="text" name="capFirstname" data-ng-model="team.cap.firstName">
-    mid<input type="text" name="capMiddlename" data-ng-model="team.cap.middleName">
-    lst<input type="text" name="capLastname" data-ng-model="team.cap.lastName">
-    email<input type="email" name="capEmail" data-ng-model="team.cap.email">
-    phone<input type="phone" name="capPhone" data-ng-model="team.cap.phone">
+    First Name<input type="text" name="capFirstname" data-ng-model="team.cap.firstName">
+    Middle Name or Initial<input type="text" name="capMiddlename" data-ng-model="team.cap.middleName">
+    Last name<input type="text" name="capLastname" data-ng-model="team.cap.lastName">
+    Email<input type="email" name="capEmail" data-ng-model="team.cap.email">
+    Phone Number<input type="phone" name="capPhone" data-ng-model="team.cap.phone">
     <h2>Coach</h2>
-    frst<input type="text" name="coachFirstname" data-ng-model="team.coach.firstName">
-    mid<input type="text" name="coachMiddlename" data-ng-model="team.coach.middleName">
-    lst<input type="text" name="coachLastname" data-ng-model="team.coach.lastName">
-    email<input type="email" name="coachEmail" data-ng-model="team.coach.email">
-    phone<input type="phone" name="coachPhone" data-ng-model="team.coach.phone">
-    team_pic<input type="file" name="teampic" accept="image/*">
+    First Name<input type="text" name="coachFirstname" data-ng-model="team.coach.firstName">
+    Middle Name or Initial<input type="text" name="coachMiddlename" data-ng-model="team.coach.middleName">
+    Last name<input type="text" name="coachLastname" data-ng-model="team.coach.lastName">
+    Email<input type="email" name="coachEmail" data-ng-model="team.coach.email">
+    Phone Number<input type="phone" name="coachPhone" data-ng-model="team.coach.phone">
     <input type="button" name="submitTeam" value="Create Team" data-ng-click="createTeam()" data-ng-show="!teamFormatting">
     <input type="button" name="updateTeam" value="Update Team" data-ng-click="updateTeam()" data-ng-show="teamFormatting">
   </form>
 
+  <h1>Register Player</h1>
   <form data-ng-submit="createPlayer()">
     <select name="team" data-ng-model="player.team">
       <option value="{{teamId._id}}" data-ng-repeat="teamId in teams">{{teamId.name}}</option>
     </select>
 
-    frst<input type="text" name="firstname" data-ng-model="player.firstname">
-    mdl<input type="text" name="middlename" data-ng-model="player.middlename">
-    lst<input type="text" name="lastname" data-ng-model="player.secondname">
-    email<input type="email" name="email" data-ng-model="player.email">
-    phone<input type="phone" name="phone" data-ng-model="player.phone">
-    dob<input type="date" name="dob" data-ng-model="player.dob">
-    age<input type="text" name="age" data-ng-model="player.age">
-    h<input type="text" name="height" data-ng-model="player.height">
-    w<input type="text" name="weight" data-ng-model="player.weight">
-    num<input type="text" name="number" data-ng-model="player.number">
-    pos<input type="text" name="position" data-ng-model="player.position">
-    img<input type="file" name="playerpic" accept="image/*" data-ng-model="player.img">
+    First Name<input placeholder="First Name" type="text" name="firstname" data-ng-model="player.firstname">
+    Middle Name or Initial<input type="text" name="middlename" data-ng-model="player.middlename">
+    Last Name<input type="text" name="lastname" data-ng-model="player.secondname">
+    Email<input type="email" name="email" data-ng-model="player.email">
+    Phone Number<input type="phone" name="phone" data-ng-model="player.phone">
+    DOB<input type="date" name="dob" data-ng-model="player.dob">
+    Age<input type="text" name="age" data-ng-model="player.age">
+    Height<input type="text" name="height" data-ng-model="player.height">
+    Weight<input type="text" name="weight" data-ng-model="player.weight">
+    Player Number<input type="text" name="number" data-ng-model="player.number">
+    Player Position<input type="text" name="position" data-ng-model="player.position">
+    Player Profile Picture<input type="file" name="playerpic" accept="image/*" data-ng-model="player.img">
     <button type="button" name="delete" value="Delete">
     <button type="button" name="edit" value="Edit">
     <input type="submit" name="submitPlayer" value="Add player">
