--- a/src/views/contact/contact_view.html
+++ b/src/views/contact/contact_view.html
@@ -1,26 +1,24 @@
-<section>
-  <h1>Контакты</h1>
-  <h2>Координатор ХБЛ</h2>
-  <p>Марина Тьян</p>
+<section class="contact-view">
+  <h1>Contacts</h1>
+  <h2>HBL Coordinator</h2>
+  <p>Marina Tian</p>
   <a href="tel:380936522322">(+38) 093 652 23 22</a>
   <a href="mailto:chbl.org@gmail.com">chbl.org@gmail.com</a>
 
   <form>
-    <input type="text" name="name" value="">
-    <input type="email" name="emailaddress" value="">
-    <input type="url" name="website" value="">
-    <textarea rows="4" cols="50"></textarea>
-    <input type="submit" name="submit" value="Send">
+    <p>Name: <input type="text" name="name" value=""></p>
+    <p>Email: <input type="email" name="emailaddress" value=""></p>
+    <p>Website: <input type="url" name="website" value=""><p>
+    <p>Message: </p>
+    <textarea rows="4" cols="38"></textarea>
+    <input type="submit" class="submit-btn" name="submit" value="Send">
   </form>
 
-  <p>Дивизион А:</p>
-  <p>СК НУХТ, Киев, Пр-т Науки, 29-А</p>
-  <img src=""></img>
-  <p>Дивизион Б:</p>
-  <p>ФСК «Экономист» КНЭУ, ул. Ежена Потье, 18. Район: Шевченковский. Метро Берестейская.</p>
-  <img src=""></img>
+  <p>Division A:</p>
+  <p>SC NUHT, Kiev, Ave. Science, 29-А</p>
+  <img src="././images/divisiona.jpg" alt="Map to Division A Location"></img>
+  <p>Division B:</p>
+  <p>FGC "Economist" of KNEU Street. Eugène Pottier, 18 District: Shevchenko. Subway Beresteiska.</p>
+  <img src="././images/divisionb.jpg" alt="Map to Division B Location"></img>
 
 </section>
-
-Contact
- contact info from old website
