--- a/src/styles/partials/_contact_view.scss
+++ b/src/styles/partials/_contact_view.scss
@@ -1,3 +1,68 @@
-@media screen and (max-width: 50em) {
+.contact-view{
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-content: stretch;
+  -ms-flex-line-pack: stretch;
+  align-content: stretch;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-family: Roboto-bold;
+  color: $primary-font-color;
+  text-shadow: 1px 1px 1px #CCCCCC;
 
+
+  .submit-btn{
+      margin-right: auto;
+      margin-left: auto;
+      @extend %main-button;
+      background-color: $highlight;
+  }
+
+    .submit-btn:hover{
+      background-color: $dark-highlight;
+      border-color: $dark-highlight;
+    }
+
+    form{
+      margin-top: 5em;
+    }
+
+    input{
+      margin-top: 0.5em;
+      margin-bottom: 0.5em;
+      display: block;
+      background-color: $main-bk-color;
+      border-top: 0;
+      border-left: 0;
+      border-right: 0;
+      border-bottom: 1;
+      border-bottom-color: $btn-color;
+    }
+
+    p{
+      text-decoration: none;
+      font-size: 1.25em;
+      font-family: Roboto-bold;
+      color: $primary-font-color;
+      text-shadow: 1px 1px 1px #CCCCCC;
+    }
+    img{
+      margin-top: 1em;
+      margin-bottom: 4em;
+    }
+
+  @media screen and (max-width: 50em) {
+
+  }
 }
