--- a/src/styles/partials/_signup_view.scss
+++ b/src/styles/partials/_signup_view.scss
@@ -22,6 +22,7 @@
       margin-right: auto;
       margin-left: auto;
       @extend %main-button;
+      background-color: $highlight;
     }
 
     .submit-btn:hover{
