updating add team to season controller

--- a/src/views/admin/addTeam/addTeam_view.html
+++ b/src/views/admin/addTeam/addTeam_view.html
@@ -1,10 +1,10 @@
 <section data-ng-init="getSome()">
   <ul id="teamsNotInSeason">
-      <li data-ng-repeat="teams in teamArray">
-        <span data-ng-if="true">{{teams.name}}
-           <button data-ng-click="addTeamToSeason()">Add To Season</button>
-           <button data-ng-click="updateTeam()">Update Team</button>
-           <button data-ng-click="removeTeamFromSeason()">Remove Team</button>
+      <li data-ng-repeat="team in teamArray">
+        <span data-ng-if="true">{{team.name}}
+           <button data-ng-click="addTeamToSeason(team._id)">Add To Season</button>
+           <button data-ng-click="updateTeam(team._id)">Update Team</button>
+           <button data-ng-click="removeTeamFromSeason(team._id)">Remove Team</button>
         </span>
       </li>
     </ul>
