add season and add game partials scss done

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -29,7 +29,7 @@ header {
 }
 .header-nav ul li a:hover {
 	color: $highlight;
-	border-bottom: .125em solid $primary-font-color;
+	border-bottom: 0.125em solid $primary-font-color;
 
 }
 .header-nav ul li a:active {
