--- a/src/views/admin/admin_view.html
+++ b/src/views/admin/admin_view.html
@@ -1,4 +1,4 @@
-<section data-ng-if="isAdmin">
+<section class="admin-view" data-ng-if="isAdmin">
 <ul>
   <li><a ui-sref="admin.addSeason">Add Season</a></li>
   <li><a ui-sref="admin.addGame">Add Game</a></li>
