trying to remove team from teamArray once added to season

--- a/src/views/admin/addTeam/addTeam_view.html
+++ b/src/views/admin/addTeam/addTeam_view.html
@@ -2,7 +2,7 @@
   <ul id="teamsNotInSeason">
       <li data-ng-repeat="team in teamArray">
         <span data-ng-if="true">{{team.name}}
-           <button data-ng-click="addTeamToSeason(team._id)">Add To Season</button>
+           <button data-ng-click="addTeamToSeason(team)">Add To Season</button>
            <button data-ng-click="updateTeam(team._id)">Update Team</button>
            <button data-ng-click="removeTeamFromSeason(team._id)">Remove Team</button>
         </span>
