scss for add team and add score partials, still needs tweaking but functional and base look is there

--- a/src/views/admin/addScore/addScore_view.html
+++ b/src/views/admin/addScore/addScore_view.html
@@ -1,15 +1,22 @@
-<section data-ng-init="">
+<section class="addScore-view" data-ng-init="">
   <form>
-    <select>
-      <option value="Game 1">Game 1</option>
-      <option value="Game 2">Game 2</option>
-      <option value="Game 3">Game 3</option>
-      <option value="Game 4">Game 4</option>
-    </select>
-		<input type="text" name="team1name" value="">
+    <div>
+      <p>Game to add Score to: </p>
+      <select>
+        <option value="Game 1">Game 1</option>
+        <option value="Game 2">Game 2</option>
+        <option value="Game 3">Game 3</option>
+        <option value="Game 4">Game 4</option>
+      </select>
+    </div>
+		<p>Home Team: </p>
+    <input type="text" name="team1name" value="">
+    <p>Home Team Score: </p>
     <input type="text" name="team1score" value="">
+    <p>Visiting Team: </p>
 		<input type="text" name="team2name" value="">
+    <p>Visiting Team Score: </p>
     <input type="text" name="team2score" value="">
-    <input type="submit" name="addscore" value="Add Score">
+    <input type="submit" class="submit-btn" name="addscore" value="Add Score">
   </form>
 </section>
