--- a/src/styles/partials/_addTeam_view.scss
+++ b/src/styles/partials/_addTeam_view.scss
@@ -1,3 +1,36 @@
-@media screen and (max-width: 50em) {
+.addTeam-view{
+  @extend %flex-form;
 
+  .submit-btn{
+      margin-top: 2em;
+      margin-right: auto;
+      margin-left: auto;
+      @extend %main-button;
+      background-color: $highlight;
+      font-size: 0.7em;
+    }
+
+    .submit-btn:hover{
+      background-color: $dark-highlight;
+      border-color: $dark-highlight;
+    }
+
+    ul{
+      display: block;
+      list-style: none;
+      text-align: right;
+      margin-bottom: 1em;
+    }
+
+    li{
+      text-decoration: none;
+      font-size: 1.75em;
+      font-family: Roboto-bold;
+      color: $btn-color;
+      text-shadow: 1px 1px 1px #CCCCCC;
+    }
+
+  @media screen and (max-width: 50em) {
+
+  }
 }
