--- a/src/views/admin/admin_view.html
+++ b/src/views/admin/admin_view.html
@@ -1,5 +1,5 @@
 <section class="admin-view" data-ng-if="isAdmin">
-<ul>
+<ul class="admin-nav">
   <li><a ui-sref="admin.addSeason">Add Season</a></li>
   <li><a ui-sref="admin.addGame">Add Game</a></li>
   <li><a ui-sref="admin.addTeam">Add Team</a></li>
