Finish register team and player forms

--- a/src/views/home/home_view.html
+++ b/src/views/home/home_view.html
@@ -29,7 +29,7 @@
       </tr>
       <tr>
         <td>2</td>
-        <td><img class="sport-icons" src="styles/fonts/sports-icons/dunk.svg">Seattle Smashers</td>
+        <td><img class="sport-icons" src="styles/fonts/sports-icons/dunk.svg">Seattle Slam Dunkers</td>
         <td>+</td>
         <td>11</td>
         <td>9</td>
