updating add score controller and view plus minor change to season score schema model

--- a/src/views/admin/addScore/addScore_view.html
+++ b/src/views/admin/addScore/addScore_view.html
@@ -1,4 +1,4 @@
-<section class="addScore-view" data-ng-init="">
+<section class="addScore-view" data-ng-init="filterScoreArray()">
   <form>
     <div>
       <p>Game to add Score to: </p>
