Make Roman happy by decreasing font size on header :P

--- a/src/styles/components/_INDEX.scss
+++ b/src/styles/components/_INDEX.scss
@@ -1,6 +1,7 @@
 //Import scss files here into this main file
 @import "header";
-@import "footer";
 @import "buttons";
 @import "standings";
 @import "rt_forms";
+@import "welcome";
+@import "footer";
