--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -19,8 +19,7 @@ header {
 	}
 	a {
 		text-decoration: none;
-		font-size: em(16);
-		font-family: Roboto-bold;
+		font-size: em(18);
 		margin-left: 1em;
 		color: $primary-font-color;
 		text-shadow: 1px 1px 1px #CCCCCC;
@@ -39,11 +38,11 @@ header {
 .header-section {
 	@extend %flex-box;
 	align-items: center;
-	font-size: em(32);
+	font-size: em(24);
 	height: 3em;
 	border-bottom: 1px solid $light-font-color;
 	img {
-		width: 2em;
+		width: 1em;
 		fill: $highlight;
 	}
 }
@@ -52,4 +51,7 @@ header {
 	align-items: center;
 	height: 4em;
 	@extend %left-padding;
+}
+.header-style {
+	font-family: Roboto-thin;
 }
