--- a/src/views/admin/addScore/addScore_view.html
+++ b/src/views/admin/addScore/addScore_view.html
@@ -9,20 +9,18 @@
           <td>Away Team:</td>
           <td>Away Team Score:</td>
           <td>Game Date:</td>
-          <td>Location:</td>
           <td></td>
         </tr>
      </thead>
-        <tr data-ng-repeat="game in season">
-          <td data-ng-model="game.team1.name">{{team1.name}}</td>
-          <td data-ng-model="game.team1.score">{{team1.score}}</td>
-          <td data-ng-model="game.team2.name">{{team2.name}}</td>
-          <td data-ng-model="game.team2.score">{{team2.score}}</td>
-          <td data-ng-model="game.date">Game Date:</td>
-          <td data-ng-model="game.location">Location:</td>
+        <tr data-ng-repeat="game in scoreArray">
+          <td data-ng-model="team1.name">{{game.teams[0].name}}</td>
+          <td><input data-ng-model="team1.score">{{team1.score}}</input></td>
+          <td data-ng-model="team2.name">{{game.teams[1].name}}</td>
+          <td><input data-ng-model="team2.score">{{team2.score}}</input></td>
+          <td data-ng-model="game.date">{{game.date}}</td>
           <td>
-            <button data-ng-if="game.editing" data-ng-click="post(game)">Post</button>
-            <button data-ng-if="game.editing" data-ng-click="cancel(game)">Cancel</button>
+            <button data-ng-click="addScore(game)">Post</button>
+            <button data-ng-click="cancel(game)">Cancel</button>
           </td>
         </tr>
     </table>
