Add media query to header

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -53,3 +53,9 @@ header {
 	height: 4em;
 	@extend %left-padding;
 }
+
+@media screen and (max-width: 50em) {
+	header {
+		padding-top: 2em;
+	}
+}
