changes to general site appearance as well as updates to admin section scss

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -21,6 +21,11 @@
 	display: inline-block;
 }
 
+.links_media_item img:hover { //remove this section to fix issue of footer twitching
+	border: 3px solid $btn-hover-light; 
+	border-radius: 10px;
+}
+
 .social-img {
 	height: 2.5em;
 }
