--- a/src/styles/partials/_addScore_view.scss
+++ b/src/styles/partials/_addScore_view.scss
@@ -33,6 +33,24 @@
       text-shadow: 1px 1px 1px #CCCCCC;
     }
 
+    h1{
+      text-decoration: none;
+      font-size: 1.75em;
+      font-family: Roboto-bold;
+      color: $btn-color;
+      text-shadow: 1px 1px 1px #CCCCCC;
+    }
+
+    td{
+      text-decoration: none;
+      font-size: 1em;
+      font-family: Roboto-bold;
+      color: $btn-color;
+      text-shadow: 1px 1px 1px #CCCCCC;
+      padding-left: 0.5em;
+      padding-right: 0.5em;
+    }
+
     div{
       @extend %flex-box;
       margin-bottom: 1em;
