--- a/src/views/admin/addScore/addScore_view.html
+++ b/src/views/admin/addScore/addScore_view.html
@@ -13,11 +13,11 @@
         </tr>
      </thead>
         <tr data-ng-repeat="game in scoreArray">
-          <td data-ng-model="team1.name">{{game.teams[0].name}}</td>
-          <td><input data-ng-model="team1.score">{{team1.score}}</input></td>
-          <td data-ng-model="team2.name">{{game.teams[1].name}}</td>
-          <td><input data-ng-model="team2.score">{{team2.score}}</input></td>
-          <td data-ng-model="game.date">{{game.date}}</td>
+          <td>{{game.teams[0].name}}</td>
+          <td><input data-ng-model="game.newscore1"></input></td>
+          <td>{{game.teams[1].name}}</td>
+          <td><input data-ng-model="game.newscore2"></input></td>
+          <td>{{game.date}}</td>
           <td>
             <button data-ng-click="addScore(game)">Post</button>
             <button data-ng-click="cancel(game)">Cancel</button>
